--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,9 +24,9 @@ bind -r C-l resize-pane -R
 set -g mouse on
 
 # Set mouse mode on (this allows scrolling and selection)
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-option -g mouse-resize-pane on
 
 ############################################################################
 # Unbindings
@@ -42,3 +42,4 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
+unbind r
