This commit is now 100% unmodified kickstart.nvim. +keybinds, gruvbox, undotree

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,9 +24,10 @@ bind -r C-l resize-pane -R
 set -g mouse on
 
 # Set mouse mode on (this allows scrolling and selection)
-#set-option -g mouse-select-pane on
-#set-option -g mouse-select-window on
-#set-option -g mouse-resize-pane on
+set -g mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 
 ############################################################################
 # Unbindings
