good progress, mostly keybind switches

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,9 @@ set -g prefix C-a
 # start window indexing at one instead of zero
 set -g base-index 1
 
-# Set 'v' for vertical and 'b' for horizontal split
+# Set 'v' for vertical and 'n' for horizontal split
 bind v split-window -h -c '#{pane_current_path}'
-bind b split-window -v -c '#{pane_current_path}'
+bind n split-window -v -c '#{pane_current_path}'
 
 # vim-like pane switching
 bind -r k select-pane -U
