tmux.conf minor change

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,13 @@
-set -g prefix C-a
+set -g prefix C-i
+#C-i represents Tab 
 
 ############################################################################
 # start window indexing at one instead of zero
 set -g base-index 1
+set -g mouse off 
 
-# Set 'v' for vertical and 'n' for horizontal split
-bind v split-window -h -c '#{pane_current_path}'
+# Set 'm' for vertical and 'n' for horizontal split
+bind m split-window -h -c '#{pane_current_path}'
 bind n split-window -v -c '#{pane_current_path}'
 
 # vim-like pane switching
@@ -19,15 +21,6 @@ bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
-
-# Enable mouse support (works for tmux version 2.1 and above)
-set -g mouse on
-
-# Set mouse mode on (this allows scrolling and selection)
-set -g mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
 
 ############################################################################
 # Unbindings
