standard commit statement

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,9 +6,8 @@ set -g prefix C-i
 set -g base-index 1
 set -g mouse off 
 
-# Set 'm' for vertical and 'n' for horizontal split
-bind m split-window -h -c '#{pane_current_path}'
-bind n split-window -v -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
 
 # vim-like pane switching
 bind -r k select-pane -U
