--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -g prefix C-i
+set -g prefix C-w
 #C-i represents Tab 
 
 ############################################################################
